--- a/day1/mrgsolve-presentation.Rmd
+++ b/day1/mrgsolve-presentation.Rmd
@@ -344,7 +344,6 @@ modlib()
 ```
 
 
-# Internal model library
 ```{r}
 mod <- mread("effect", modlib())
 ```
@@ -390,7 +389,7 @@ set.seed(1222)
 
 # Event objects
 
-- `model %>%` <red>intervention</red> `%>% Go! %>% take-a-look`
+- `model %>% intervention %>% Go! %>% take-a-look`
 
 - Event object  = quick / easy way to implement dose or other intervention
 
@@ -428,15 +427,15 @@ mod %>% mrgsim(events = e)
 
 # What to include in `ev(...)`
 
-- <grn>time</grn> event time
-- <grn>cmt</grn> Event compartment
-- <grn>amt</grn> Dose amount
-- <grn>ii</grn> Inter-dose interval
-- <grn>addl</grn> Additional doses to administer
-- <grn>rate</grn> Infusion rate
-- <grn>ss</grn> Set to 1 to advance to steady state
-- <grn>evid</grn> Event id
-- <grn>ID</grn> Subject ID (use multiple ids - ID=1:10)
+- <grn>time</grn>: event time
+- <grn>cmt</grn>: Event compartment
+- <grn>amt</grn>: Dose amount
+- <grn>ii</grn>: Inter-dose interval
+- <grn>addl</grn>: Additional doses to administer
+- <grn>rate</grn>: Infusion rate
+- <grn>ss</grn>: Set to 1 to advance to steady state
+- <grn>evid</grn>: Event id
+- <grn>ID</grn>: Subject ID (use multiple ids - ID=1:10)
 
 # Interventions and corresponding `evid`
 
@@ -470,8 +469,6 @@ e2 <- ev(amt = 100, time = 24, ii = 24, addl = 4)
 c(e1, e2)
 ```
 
-# Create complex events - 1
-
 What's going to happen?
 
 ```{r, echo = FALSE}
@@ -480,12 +477,9 @@ e2 <- ev(amt = 100, time = 24, ii = 24, addl = 4)
 e <- c(e1,e2)
 mod %>% 
   ev(e) %>% 
-  mrgsim(end = 120) %>% plot(CP~.)
+  mrgsim(end = 168) %>% plot(CP~.)
 ```
 
-
-
-# Create complex events - 1
 
 Combine two events
 
@@ -509,8 +503,6 @@ e2 <- ev(amt = 100, ii = 24, addl = 4)
 seq(e1, e2)
 ```
 
-# Create complex events - 2
-
 What's going to happen?
 
 ```{r, echo = FALSE}
@@ -519,9 +511,6 @@ e2 <- ev(amt = 100, ii = 24, addl = 4)
 e <- seq(e1, e2)
 mrgsim(mod, events = e, end = 180) %>% plot(CP ~ .)
 ```
-
-
-# Create complex events - 2
 
 Put two events in a sequence
 
@@ -546,8 +535,6 @@ e2 <- ev(amt = 100, ii = 24, addl = 4)
 seq(e1, wait = 36, e2)
 ```
 
-# Create complex events - 3
-
 What is going to happen?
 
 ```{r, echo = FALSE}
@@ -556,8 +543,6 @@ e2 <- ev(amt = 100, ii = 24, addl = 4)
 e <- seq(e1, wait = 36, e2)
 mrgsim(mod, events = e, end = 180) %>% plot(CP ~ .)
 ```
-
-# Create complex events - 3
 
 Wait before starting the next part of the regimen
 
@@ -589,8 +574,6 @@ as.data.frame(e1)
 - We will use a <blk>data_set</blk> later on for populations
 
 - Event objects are convenient
-  - Constructor
-  - Operations
   
   
 ```{r  echo = FALSE, message = FALSE}
@@ -610,7 +593,7 @@ mod <- mread_cache("effect", modlib())
 
 <hr>
 
-`model %>% intervention %>%` <grn>Go!</grn>
+`model %>% intervention %>% <grn>Go!</grn>`
 
 <hr>
 
@@ -665,7 +648,7 @@ stime(mod)
 
 <hr>
 
-<red>model</red> `%>%` <blu>intervention</blu> `%>%` <grn>Go!</grn> `%>%` <orng>take-a-look</orng> 
+`<red>model</red> %>% <blu>intervention</blu> %>% <grn>Go!</grn> %>% <orng>take-a-look</orng>` 
 
 <hr>
 
@@ -688,7 +671,7 @@ stime(mod)
 
 <hr>
 
-`model %>% intervention %>% Go! %>%` <orng>take-a-look</orng> 
+`model %>% intervention %>% Go! %>% <orng>take-a-look</orng>` 
 
 <hr>
 
